# pyfusion

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: database_demo.py  demo.db  full_stack.py  pyfusion_db.sqlite  web_app.py
projects/my_pyfusion_app/: app_data.sqlite  config.json  demo_data.json  main.py
projects/my_pyfusion_app/data/: sample_data.csv
projects/my_pyfusion_app/templates/: dashboard.html
pyfusion_v1/: __init__.py
pyfusion_v1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyfusion_v1/database/: __init__.py  manager.py
pyfusion_v1/utils/: __init__.py  file_ops.py  helpers.py  network.py
pyfusion_v1/web/: __init__.py  client.py  server.py
pyfusion_v2/: MANIFEST.in  pyproject.toml  requirements.txt  setup.py
pyfusion_v2/examples/: basic_app.py
pyfusion_v2/pyfusion/: __init__.py
pyfusion_v2/pyfusion/ai/: ml.py
pyfusion_v2/pyfusion/auth/: decorators.py  jwt.py  manager.py  permissions.py
pyfusion_v2/pyfusion/cli/: main.py
pyfusion_v2/pyfusion/core/: config.py  exceptions.py  logging.py  security.py
pyfusion_v2/pyfusion/database/: connection_pool.py  manager.py  migrations.py  orm.py
pyfusion_v2/pyfusion/tasks/: queue.py  scheduler.py
pyfusion_v2/pyfusion/testing/: client.py  testcase.py
pyfusion_v2/pyfusion/utils/: analytics.py  cache.py  file_ops.py  network.py
pyfusion_v2/pyfusion/web/: client.py  middleware.py  rate_limiter.py  server.py  templates.py
