[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfusion"
version = "1.0.2"
authors = [
    {name = "PyFusion Team", email = "anshumansingh3697@gmail.com"},
]
description = "All-in-One Python Framework with built-in web, database, and utilities"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["framework", "web", "database", "utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8", 
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "flask>=2.0.0",
    "requests>=2.25.0", 
    "sqlalchemy>=1.4.0",
    "jinja2>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/anshuman365/pyfusion"
"Bug Reports" = "https://github.com/anshuman365/pyfusion/issues"
"Source" = "https://github.com/anshuman365/pyfusion"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]